# dataverk-airflow

./: CODEOWNERS  README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yaml
.github/workflows/: auto-merge.yaml  release.yml  tests.yaml  upload-composer-bucket.yaml
dags/: dataverk-airflow.py
dags/notebooks/: myfile.json  mynb.ipynb  quarto.ipynb  script.py
dataverk-airflow/: git_clone.py  knada_operators.py  kubernetes_operator.py
dataverk_airflow/: __init__.py  bucket_read.py  dbt_build_operator.py  dbt_docs_operator.py  dbt_operator.py  git_clone.py  init_containers.py  knada_operators.py  kubernetes_operator.py  notebook_operator.py  notifications.py  python_operator.py  quarto_operator.py  secret_fetcher.py
src/dataverk_airflow/: __init__.py  init_containers.py  knada_operators.py  kubernetes_operator.py  notebook_operator.py  notifications.py  python_operator.py
src/dataverk_airflow/gcp/: composer_operators.py  init_containers.py
tests/: test_git_clone.py  test_kubernetes_operator.py  test_notebook_operator.py  test_python_operator.py  test_quarto_operator.py
tests-integration/: composer.py  configmap-ca-bundle.yaml  dataverk-airflow.py  knada.py
tests-integration/dbt/: profiles.yml
tests-integration/dbt/k8s_resources/: oracle-db.yaml
tests-integration/dbt/nada_dbt_test/: dbt_project.yml  kljsf.py
tests-integration/dbt/nada_dbt_test/models/example/: schema.yml
tests-integration/notebooks/: mynb.ipynb  quarto.ipynb  requirements.txt
tests-integration/notebooks/quartobook/: _quarto.yml
tests/test_files/: git_clone.yaml
