[tool.poetry]
name = "dataverk-airflow"
version = "1.0.0"
description = ""
authors = ["NAV", "NADA"]
readme = "README.md"
packages = [{include = "dataverk_airflow"}]
repository = "https://github.com/navikt/dataverk-airflow"
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Framework :: Apache Airflow',
  'Framework :: Apache Airflow :: Provider',
]

[tool.poetry.dependencies]
apache-airflow = "2.10.5"
apache-airflow-providers-cncf-kubernetes = "8.4.2"
pathlib = "^1.0.1"
python = "^3.8.1,<3.12"
apache-airflow-providers-slack = "8.9.0"
exceptiongroup = "^1.2.2"
knatch = "1.1.0"

[tool.poetry.group.test.dependencies]
apache-airflow = "2.10.5"
apache-airflow-providers-cncf-kubernetes = "8.4.2"
pyaml = "^25.5.0"
pytest = ">=7.4.2,<9.0.0"
pytest-datafiles = "^3.0.0"

[tool.poetry.group.integration-test.dependencies]
apache-airflow = "2.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
